--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/camera": "^6.1.1",
     "@capacitor/clipboard": "^6.0.2",
     "@capacitor/core": "6.2.0",
+    "@capacitor/device": "^7.0.2",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/ios": "6.2.0",
     "@capacitor/keyboard": "6.0.2",
