--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,32 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
-    //  lint {
-    //     checkReleaseBuilds false
-    // }
-    // signingConfigs {
-    //   release {
-    //   keyAlias 'key0'
-    //     storeFile file('/Users/appunik/Downloads/android_key/key.jks')
-    //     storePassword 'password'
-    //     keyPassword 'password'
-    //   }
-    // }
     namespace "com.msproducts.fuelApp"
     compileSdk 35
     defaultConfig {
         applicationId "com.msproducts.fuelApp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion 35
-        versionCode 15
-        versionName "15.0"
+        versionCode 16
+        versionName "16.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
-             // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
-             // Default: https://android.googlesource.com/platform/frameworks/base/+/282e181b58cf72b6ca770dc7ca5f91f135444502/tools/aapt/AaptAssets.cpp#61
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
-            //   signingConfig signingConfigs.release
     }
     buildTypes {
         release {
@@ -52,6 +38,10 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+
+    // ✅ UPDATED: Use new Play In-App Updates library
+    implementation 'com.google.android.play:app-update:2.1.0'
+    implementation 'com.google.android.play:app-update-ktx:2.1.0'
 }
 
 apply from: 'capacitor.build.gradle'
@@ -64,7 +54,6 @@ try {
 } catch(Exception e) {
     logger.info("google-services.json not found, google-services plugin not applied. Push Notifications won't work")
 }
- 
 
 task findCoreUsage {
     doLast {
